--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
 <p>Hello World</p>
 <p>Hello World</p>
 <p>Hello World</p>
+<img src="C:\Users\Cerwin John\Desktop\INTEGRATIVE\1.jpg" alt="IMAGES" style="width: 300px; height: 300px;">
 
 <button onclick="sum()">Click ME!</button>
 
